World Editor/ Add localization strings tool. Fix bugs in creating characters.

--- a/muddery/web/webclient/webclient/main.html
+++ b/muddery/web/webclient/webclient/main.html
@@ -192,7 +192,7 @@
                             <a id="view_system" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle">Sys<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a id="view_logout" onclick="commands.doLogout()" class="first-dropdown-item">Logout</a>
+                                    <a id="view_logout_puppet" onclick="commands.doLogout()" class="first-dropdown-item">Logout</a>
                                 </li>
                                 <li>
                                     <a id="view_unpuppet" onclick="commands.unpuppetCharacter()" class="dropdown-item">Unpuppet</a>
