Add quick login mode.

--- a/muddery/web/webclient/webclient/main.html
+++ b/muddery/web/webclient/webclient/main.html
@@ -25,6 +25,7 @@
 		<!-- languages -->
         <script src="./lang/en-us/strings.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lang/zh-cn/strings.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./lang/zh-tw/strings.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lang/local_string.js" type="text/javascript" charset="utf-8"></script>
         
         <!-- client -->
