--- a/muddery/web/webclient/webclient/main.html
+++ b/muddery/web/webclient/webclient/main.html
@@ -139,6 +139,7 @@
                         <iframe id="frame_inventory" class="content_frame" src="./views/inventory.html"></iframe>
                         <iframe id="frame_skills" class="content_frame" src="./views/skills.html"></iframe>
                         <iframe id="frame_quests" class="content_frame" src="./views/quests.html"></iframe>
+                        <iframe id="frame_honours" class="content_frame" src="./views/honours.html"></iframe>
                     </div>
                 </div>
                 <div id="tab_bar">
@@ -177,6 +178,9 @@
                         </li>
                         <li id="tab_social" role="presentation" class="dropup hidden">
                             <a id="view_social" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle">Social<span class="caret"></span></a>
+                        </li>
+                        <li id="tab_honours" role="presentation" class="">
+                            <a id="view_honours" onclick="controller.showHonours()">Honours</a>
                         </li>
                         <li id="tab_map" role="presentation" class="">
                             <a id="view_map" onclick="controller.showMap()">Map</a>
