Modify the web client.

--- a/muddery/web/webclient/webclient/main.html
+++ b/muddery/web/webclient/webclient/main.html
@@ -64,7 +64,7 @@
         <script src="./utils/map_data.js" type="text/javascript" charset="utf-8"></script>
         <script src="./utils/text2html.js" type="text/javascript" charset="utf-8"></script>
         <script src="./utils/data_handler.js" type="text/javascript" charset="utf-8"></script>
-        <script src="./utils/escape.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./utils/text_escape.js" type="text/javascript" charset="utf-8"></script>
         <script src="./utils/utils.js" type="text/javascript" charset="utf-8"></script>
         <script src="./utils/paginator.js" type="text/javascript" charset="utf-8"></script>
 
@@ -387,8 +387,7 @@
         <script src="./controllers/muddery_goods.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 
         <script src="./client/frameworks.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="./client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="./client/index.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="./client/loader.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
 			"<%= htmlWebpackPlugin.options.contents.comment_end %>"
