Modify the world editor.

--- a/muddery/web/webclient/webclient/main.html
+++ b/muddery/web/webclient/webclient/main.html
@@ -7,7 +7,7 @@
         <title>Muddery Webclient</title>
 
         <!-- libs -->
-        <link href="./libs/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="./libs/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <script src="./libs/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./libs/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./libs/d3-selection.v1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -17,25 +17,25 @@
 			"<%= htmlWebpackPlugin.options.contents.comment_begin %>"
 			// block the followings in webpack
 		</script>
-        <link href="./css/webclient.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/message.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/new_char.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/scene.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/select_char.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/information.css" rel="stylesheet" type="text/css" media="screen" />
-     	<link href="./css/inventory.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/skills.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/quests.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/honours.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/object.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/dialogue.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/map.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/delete_char.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/combat.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/combat_result.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/confirm_combat.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/shop.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="./css/goods.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="./css/webclient.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/message.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/new_char.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/scene.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/select_char.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/information.css" rel="stylesheet" type="text/css" />
+     	<link href="./css/inventory.css" rel="stylesheet" type="text/css" />
+        <link href="./css/skills.css" rel="stylesheet" type="text/css" />
+        <link href="./css/quests.css" rel="stylesheet" type="text/css" />
+        <link href="./css/honours.css" rel="stylesheet" type="text/css" />
+        <link href="./css/object.css" rel="stylesheet" type="text/css" />
+        <link href="./css/dialogue.css" rel="stylesheet" type="text/css" />
+        <link href="./css/map.css" rel="stylesheet" type="text/css" />
+        <link href="./css/delete_char.css" rel="stylesheet" type="text/css" />
+        <link href="./css/combat.css" rel="stylesheet" type="text/css" />
+        <link href="./css/combat_result.css" rel="stylesheet" type="text/css" />
+        <link href="./css/confirm_combat.css" rel="stylesheet" type="text/css" />
+        <link href="./css/shop.css" rel="stylesheet" type="text/css" />
+        <link href="./css/goods.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript">
 			"<%= htmlWebpackPlugin.options.contents.comment_end %>"
 			// block the uppers in webpack
